[tool.poetry]
name = "rl-template"
version = "0.1.0"
description = ""
authors = ["Ben Giacalone <bensgiacalone@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_template"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"
isort = "^5.12.0"
tqdm = "^4.65.0"
wandb = "^0.15.3"
gymnasium = "^0.28.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
