[project]
name = "rl-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.11.9",
    "torch==2.0.0",
    "isort==5.12.0",
    "tqdm==4.65.0",
    "gymnasium==0.28.1",
    "envpool==0.8.2",
    "types-tqdm==4.65.0.1",
    "maturin==0.15.2",
    "wandb>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
