[project]
name = "rl-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control]>=1.2.1",
    "markupsafe==3.0.2",
    "maturin>=1.9.5",
    "numpy>=2.3.3",
    "pydantic==2.11.9",
    "torch>=2.8.0",
    "tqdm>=4.66.5",
    "types-tqdm>=4.67.0.20250809",
    "wandb>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
